src/objects/County__c.object
<CustomObject>
    <description>Represents a County in a State</description>
    <fields>
        <fullName>Available_Field_Sales__c</fullName>
        <description>Assignable Field Sales Reps for Scheduling Sales Visits</description>
        <inlineHelpText>Assignable Field Sales Reps for Scheduling Sales Visits</inlineHelpText>
        <label>Available Field Sales</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>County_Lease_Tax_Rate__c</fullName>
        <label>County Lease Tax Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FIPS_Code__c</fullName>
        <description>FIPS Code for county (2-digit state + 3 digit county code)</description>
        <externalId>true</externalId>
        <label>FIPS Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Permit_Cost__c</fullName>
        <label>Permit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Region</label>
        <referenceTo>Pricing_Region__c</referenceTo>
        <relationshipLabel>Counties</relationshipLabel>
        <relationshipName>Counties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <picklist>
            <picklistValues>
                <fullName>MA Region</fullName>
                <color>#FFCC33</color>
            </picklistValues>
            <picklistValues>
                <fullName>MD Region</fullName>
                <color>#6600CC</color>
            </picklistValues>
            <picklistValues>
                <fullName>NYC Region</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>OH Region</fullName>
                <color>#3366FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>PA Region</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>WNY Region</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>CA Region</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>CT Region</fullName>
                <color>#33FFFF</color>
            </picklistValues>
            <picklistValues>
                <fullName>NJ Region</fullName>
                <color>#F96FB7</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Abbreviation__c</fullName>
        <formula>State__r.State_Abbreviation__c</formula>
        <label>State Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State County belongs to</description>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Counties</relationshipLabel>
        <relationshipName>Counties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>County</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>FIPS_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CA</fullName>
        <columns>NAME</columns>
        <columns>Available_Field_Sales__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Region__c</field>
            <operation>equals</operation>
            <value>CA Region</value>
        </filters>
        <label>CA Counties</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MA_Region_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>FIPS_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Region__c</field>
            <operation>equals</operation>
            <value>MA Region</value>
        </filters>
        <label>MA Region Counties</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MD_Region_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>FIPS_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Region__c</field>
            <operation>equals</operation>
            <value>MD Region</value>
        </filters>
        <label>MD Region Counties</label>
    </listViews>
    <listViews>
        <fullName>NYC_Region_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>FIPS_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Region__c</field>
            <operation>equals</operation>
            <value>NYC Region</value>
        </filters>
        <label>NYC Region Counties</label>
    </listViews>
    <listViews>
        <fullName>OH_Region_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>FIPS_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Region__c</field>
            <operation>equals</operation>
            <value>OH Region</value>
        </filters>
        <label>OH Region Counties</label>
    </listViews>
    <listViews>
        <fullName>PA_Region_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>FIPS_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Region__c</field>
            <operation>equals</operation>
            <value>PA Region</value>
        </filters>
        <label>PA Region Counties</label>
    </listViews>
    <listViews>
        <fullName>WNY_Region_Counties</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>FIPS_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Region__c</field>
            <operation>equals</operation>
            <value>WNY Region</value>
        </filters>
        <label>WNY Region Counties</label>
    </listViews>
    <nameField>
        <label>County Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Counties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>